--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy
-streamlit==1.3.1
+streamlit
 opencv-python-headless
-streamlit-webrtc==0.11.0
-tensorflow-cpu==2.8.0
+streamlit-webrtc
+tensorflow-cpu==2.6.2
